allow the use of the term 'store' instead of 'generic' inside a path